Handle navigations with PAGE_TRANSITION_CLIENT_REDIRECT qualifier

to allow the AppAuth web page to work properly with ARC.

BUG=659817
TEST=try, run the apk attached to the bug on ARC

Review-Url: https://codereview.chromium.org/2451093004
Cr-Commit-Position: refs/heads/master@{#427866}

Former-commit-id: 250459af2d654e5bf411440f4a034c7e7799b7d6